Adicionei um parágrafo
teste para atalho

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,9 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores odit excepturi maxime dolores magni a vero facere, architecto quo quod quisquam molestiae vel sequi facilis animi dolorem rem sapiente aut!</p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit molestias tempore quas deserunt consectetur ex accusamus provident id quam esse quis incidunt ullam error illum quasi, itaque ipsa sunt necessitatibus?
+    </p>
     
 </body>
 </html>
